--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 
-<h1>Hello World</h1>
-<p>I am Sare, right now I am learning html at the sametime I am trying to learn css.</p>
+<h2>Marmorkake</h2>
+<p>En gammel, god oppskrift. Denne formkaken kombinerer sjokolade og vanilje og er en favoritt gjennom tidene.</p>
+<h4>
+    <ul>
+        <li>
+            
+        </li>
+    </ul>
+</h4>
