--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 
 <h2>Marmorkake</h2>
-<p>En gammel, god oppskrift. Denne formkaken kombinerer sjokolade og vanilje og er en favoritt gjennom tidene.</p>
+<p>  En gammel, god oppskrift. 
+    Denne formkaken kombinerer sjokolade, 
+    vanilje og er en favoritt gjennom tidene.</p>
 <h4>
-    <ul>
+    <ul>Ingredienser for kake
         <li>
-            
+           150 gr smør
         </li>
+         <li>
+            2dl sukker
+         </li>
+         <li>
+            3 stk egg
+         </li>
+         <li>
+            2,5 dl helmelk
+         </li>
+         <li>
+            3dl hvetemel
+         </li>
+         <li>
+            1,5 ts bakepulver
+         </li>
+         <li>
+            1,5 ts vaniljesukker
+         </li>
+         <li>
+            2 ss kakao
+         </li>
+    </ul>
+    <ul>Ingredienser for glasur
+        <li>
+            2 dl melis
+         </li>
+         <li>
+            1 stk eggehvite
+         </li>
     </ul>
 </h4>
