--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <h2>Marmorkake</h2>
-<img src="https://www.tine.no/_/recipeimage/w_1920%2Ch_1080%2Cc_fill%2Cx_1500%2Cy_1000%2Cg_xy_center/recipeimage/414163.jpg" width="200" height="200">
-<p>  En gammel, god oppskrift. 
+<img src="https://www.tine.no/_/recipeimage/w_1920%2Ch_1080%2Cc_fill%2Cx_1500%2Cy_1000%2Cg_xy_center/recipeimage/414163.jpg" width="200" height="200"
+alt= "En gammel, god oppskrift. 
     Denne formkaken kombinerer sjokolade, 
-    vanilje og er en favoritt gjennom tidene.</p>
+    vanilje og er en favoritt gjennom tidene.">
 <h4>
     <ul>Ingredienser for kake
         <li>
