--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
 
-<h2>Marmorkake</h2>
-<img src="https://www.tine.no/_/recipeimage/w_1920%2Ch_1080%2Cc_fill%2Cx_1500%2Cy_1000%2Cg_xy_center/recipeimage/414163.jpg" width="200" height="200"
-alt= "En gammel, god oppskrift. 
+<h1>DATA 1200 Inclusive Web Design</h1>
+<img
+  src="https://www.tine.no/_/recipeimage/w_1920%2Ch_1080%2Cc_fill%2Cx_1500%2Cy_1000%2Cg_xy_center/recipeimage/414163.jpg"
+  width="200"
+  height="200"
+  alt="En gammel, god oppskrift. 
     Denne formkaken kombinerer sjokolade, 
-    vanilje og er en favoritt gjennom tidene.">
-<h4>
-    <ul>Ingredienser for kake
-        <li>
-           150 gr smør
-        </li>
-         <li>
-            2dl sukker
-         </li>
-         <li>
-            3 stk egg
-         </li>
-         <li>
-            2,5 dl helmelk
-         </li>
-         <li>
-            3dl hvetemel
-         </li>
-         <li>
-            1,5 ts bakepulver
-         </li>
-         <li>
-            1,5 ts vaniljesukker
-         </li>
-         <li>
-            2 ss kakao
-         </li>
-    </ul>
-    <ul>Ingredienser for glasur
-        <li>
-            2 dl melis
-         </li>
-         <li>
-            1 stk eggehvite
-         </li>
-    </ul>
-</h4>
+    vanilje og er en favoritt gjennom tidene."
+/>
+<h2>
+  <ul>
+    Study Programme
+    <li>Bachelorstudium i ingeniørfag</li>
+    <li>Bachelorstudium i informasjonsteknologi</li>
+    <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
+  </ul>
+  <ul>
+    Learning outcomes
+    <li>Knowledge</li>
+    <li>Skills</li>
+  </ul>
+  <ul>
+    Ingredienser for glasur
+    <li>2 dl melis</li>
+    <li>1 stk eggehvite</li>
+  </ul>
+</h2>
