--- a/Oblig2/index.html
+++ b/Oblig2/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <title>Oblig 2</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>The interplay between technology and society</h1>
     <h2>Technology, values and society</h2>
     <p id="byline">
       <span style="color: orange">John TIMMER</span> - 1/5/2023, 8:09 PM
     </p>
 
-    <img src="society.png" alt="Technology and society"/>
+    <img src="society.png" alt="Technology and society" />
 
     <p><span style="color: orange">Enlarge</span> / Building a bigger brain</p>
     <hr />
-    <div>
-      <p>
+    <main>
+      <section>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aperiam id
         animi numquam assumenda velit reiciendis enim quasi accusantium illum
         suscipit hic vitae veniam reprehenderit exercitationem asperiores, quam
@@ -30,17 +30,29 @@
         fuga dolores sunt ab, eos error, est iusto voluptatem rerum. Expedita
         labore consectetur quaerat facilis excepturi odit, iusto, corrupti cum
         ipsa possimus a sit!
-      </p>
+      </section>
       <h2>Technology</h2>
-      <p>
+      <section>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquam
         aliquid praesentium dolor quis cupiditate. Praesentium qui perferendis
         reiciendis odit debitis dolorum accusamus aspernatur ullam illum.
         Repellat accusantium sapiente obcaecati quidem in esse minima possimus,
         illum dolorum tempore provident, illo, at enim exercitationem aliquid
         voluptatem. Quas perferendis voluptatum harum! Accusamus?
-      </p>
-    </div>
+      </section>
+    </main>
+    <footer>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+      inventore cupiditate et dolore repudiandae praesentium iste porro odit,
+      minus fugit itaque maxime, rerum perferendis assumenda modi est
+      reiciendis. Consequatur sint suscipit ipsam quae natus culpa odit
+      reprehenderit corrupti reiciendis sed iste fuga ab inventore qui impedit
+      ipsa omnis nostrum eius perspiciatis, doloribus totam at? Non obcaecati
+      sed ut repellat repudiandae, veniam cum! Autem magnam libero magni, sunt
+      amet asperiores repellat delectus, ullam eligendi dolorem eos quis,
+      perspiciatis accusantium similique animi soluta numquam consectetur
+      doloribus ab ad! Alias recusandae perspiciatis corporis suscipit dolorem
+      expedita velit, consequatur molestiae ipsum, voluptas ad nam!
+    </footer>
   </body>
-</body>
 </html>
