--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DATA1200</title>
+  </head>
+  <body>
+    <h1>DATA1200 Inclusive Web Design</h1>
+    <h2>Study Programme</h2>
+    <ul>
+      <li>Bachelorstudium i ingeniørfag</li>
+      <li>Bachelorstudium i informasjonsteknologi</li>
+      <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
+    </ul>
 
-<h1>DATA 1200 Inclusive Web Design</h1>
-<img
-  src="https://www.tine.no/_/recipeimage/w_1920%2Ch_1080%2Cc_fill%2Cx_1500%2Cy_1000%2Cg_xy_center/recipeimage/414163.jpg"
-  width="200"
-  height="200"
-  alt="En gammel, god oppskrift. 
-    Denne formkaken kombinerer sjokolade, 
-    vanilje og er en favoritt gjennom tidene."
-/>
-<h2>
-  <ul>
-    Study Programme
-    <li>Bachelorstudium i ingeniørfag</li>
-    <li>Bachelorstudium i informasjonsteknologi</li>
-    <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
-  </ul>
-  <ul>
-    Learning outcomes
-    <li>Knowledge</li>
-    <li>Skills</li>
-  </ul>
-  <ul>
-    Ingredienser for glasur
-    <li>2 dl melis</li>
-    <li>1 stk eggehvite</li>
-  </ul>
-</h2>
+    <h2>Learning outcomes</h2>
+    <ul>
+      <li>Knowledge</li>
+      <li>Skills</li>
+    </ul>
+
+    <h2>Teaching and learning methods</h2>
+    <ul>
+      <li>Lectures</li>
+      <li>Exercises</li>
+      <li>Self-Study</li>
+    </ul>
+  </body>
+</html>
