--- a/Oblig2/index.html
+++ b/Oblig2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>The interplay between technology and society</h1>
-    <h2>Technology, values and society</h2>
+    <h2>What is the relationship between technology and society?</h2>
     <p id="byline">
       <span style="color: orange">John TIMMER</span> - 1/5/2023, 8:09 PM
     </p>
@@ -19,40 +19,54 @@
     <hr />
     <main>
       <section>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aperiam id
-        animi numquam assumenda velit reiciendis enim quasi accusantium illum
-        suscipit hic vitae veniam reprehenderit exercitationem asperiores, quam
-        optio dignissimos officia! Deleniti deserunt maxime at omnis dicta odio
-        maiores. Sint provident porro nulla commodi, assumenda magni iste
-        laudantium doloremque consequuntur laborum tempora a quod est recusandae
-        amet blanditiis ad vitae, iure soluta? Animi numquam modi molestias
-        doloribus veniam explicabo sed maiores nostrum? Sequi rem id molestiae,
-        fuga dolores sunt ab, eos error, est iusto voluptatem rerum. Expedita
-        labore consectetur quaerat facilis excepturi odit, iusto, corrupti cum
-        ipsa possimus a sit!
+        The interplay between technology and society is a dynamic and
+        ever-evolving relationship that shapes the course of human progress.
+        Technology influences society by revolutionizing communication,
+        healthcare, education, and more, making our lives more convenient and
+        interconnected. However, it also poses challenges, such as privacy
+        concerns and job displacement. Conversely, society's needs and values
+        drive technological innovation, steering it towards ethical and
+        beneficial directions. Striking a balance is essential; we must harness
+        technology for the greater good while mitigating its potential
+        drawbacks. As we navigate this intricate dance, it's imperative that we
+        prioritize responsible innovation and ensure that technology serves the
+        well-being of all members of society.
       </section>
-      <h2>Technology</h2>
+      <h2>Technology, Values and Society</h2>
       <section>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius aliquam
-        aliquid praesentium dolor quis cupiditate. Praesentium qui perferendis
-        reiciendis odit debitis dolorum accusamus aspernatur ullam illum.
-        Repellat accusantium sapiente obcaecati quidem in esse minima possimus,
-        illum dolorum tempore provident, illo, at enim exercitationem aliquid
-        voluptatem. Quas perferendis voluptatum harum! Accusamus?
+        The relationship between technology and society's values is intricate
+        and symbiotic. Technology is a reflection of societal values as it often
+        emerges to address pressing needs or desires. Innovations are born from
+        cultural, ethical, and economic considerations, shaping and being shaped
+        by our values. For instance, the development of renewable energy
+        technologies reflects growing environmental consciousness. Conversely,
+        technology can influence societal values by altering our perceptions and
+        behaviors. It can shape our ethical stance on privacy, communication,
+        and even the definition of work. Striking a harmonious balance between
+        technology and societal values is crucial. We must ensure that
+        technological advancements align with our core principles, fostering a
+        future where technology enriches, rather than undermines, our shared
+        values and well-being.
       </section>
     </main>
     <footer>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-      inventore cupiditate et dolore repudiandae praesentium iste porro odit,
-      minus fugit itaque maxime, rerum perferendis assumenda modi est
-      reiciendis. Consequatur sint suscipit ipsam quae natus culpa odit
-      reprehenderit corrupti reiciendis sed iste fuga ab inventore qui impedit
-      ipsa omnis nostrum eius perspiciatis, doloribus totam at? Non obcaecati
-      sed ut repellat repudiandae, veniam cum! Autem magnam libero magni, sunt
-      amet asperiores repellat delectus, ullam eligendi dolorem eos quis,
-      perspiciatis accusantium similique animi soluta numquam consectetur
-      doloribus ab ad! Alias recusandae perspiciatis corporis suscipit dolorem
-      expedita velit, consequatur molestiae ipsum, voluptas ad nam!
+      <p>
+        In summary, the intricate interplay between technology and society
+        underscores the profound impact each has on the other. Technology, as a
+        catalyst for progress, reshapes our lives by enhancing convenience and
+        connectivity, yet it also introduces challenges like privacy concerns
+        and job displacement. Society's needs and values, in turn, steer
+        technological innovation, reflecting cultural, ethical, and economic
+        considerations. This symbiotic relationship highlights the evolving
+        nature of both technology and societal values. The key takeaway is the
+        necessity of achieving equilibrium in this relationship. Responsible
+        innovation must take precedence, ensuring that technology aligns with
+        our fundamental principles. By doing so, we can create a future where
+        technology and values coexist harmoniously, enriching our lives while
+        upholding our shared ethics and well-being. This dynamic dance between
+        technology and society holds the potential for a brighter, more
+        balanced, and more prosperous future.
+      </p>
     </footer>
   </body>
 </html>
