--- a/Oblig2/index.html
+++ b/Oblig2/index.html
@@ -3,20 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <!-- favicon added -->
+    <link rel="icon" href="image/logo.png" type="image/png">
+    <!-- css link added  -->
+    <link rel="stylesheet" href="css/main.css" />
     <title>Oblig 2</title>
   </head>
+
+
   <body>
-    <h1>The interplay between technology and society</h1>
-    <h2>Technology, values and society</h2>
-    <p id="byline">
-      <span style="color: orange">John TIMMER</span> - 1/5/2023, 8:09 PM
+    <header>
+    <h1 class="main-heading">The interplay between technology and society</h1>
+    <h2 class="sub-title">Technology, values and society</h2>
+  </header>
+
+    <p class="small-text">
+      <span class="colorful-text" >John TIMMER</span> - 28/9/2023, 8:09 PM
     </p>
 
-    <img src="society.png" alt="Technology and society" />
+    <img src="society.png" alt="Technology and society" class="main-image" />
 
-    <p><span style="color: orange">Enlarge</span> / Building a bigger brain</p>
-    <hr />
+    <p class="small-text"><span class="colorful-text" >Enlarge</span> / Building a bigger brain</p>
+    
     <main>
       <section>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aperiam id
@@ -42,17 +50,9 @@
       </section>
     </main>
     <footer>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-      inventore cupiditate et dolore repudiandae praesentium iste porro odit,
-      minus fugit itaque maxime, rerum perferendis assumenda modi est
-      reiciendis. Consequatur sint suscipit ipsam quae natus culpa odit
-      reprehenderit corrupti reiciendis sed iste fuga ab inventore qui impedit
-      ipsa omnis nostrum eius perspiciatis, doloribus totam at? Non obcaecati
-      sed ut repellat repudiandae, veniam cum! Autem magnam libero magni, sunt
-      amet asperiores repellat delectus, ullam eligendi dolorem eos quis,
-      perspiciatis accusantium similique animi soluta numquam consectetur
-      doloribus ab ad! Alias recusandae perspiciatis corporis suscipit dolorem
-      expedita velit, consequatur molestiae ipsum, voluptas ad nam!
-    </footer>
+      <p>&copy; 2023 Web Oblig 2</p>
+      <p>Located at 1234 Oslo, Norway</p>
+  </footer>
+  
   </body>
 </html>
