--- a/Oblig2/index.html
+++ b/Oblig2/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>The interplay between technology and society</h1>
     <h2>What is the relationship between technology and society?</h2>
-    <p id="byline">
+    <p id="author">
       <span style="color: orange">John TIMMER</span> - 1/5/2023, 8:09 PM
     </p>
 
