--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -44,6 +44,7 @@
       <li>Self-Study</li>
     </ul>
   </nav>
+  <div class="placeholder"></div>
 </main>
   <footer class="second-page-footer">
     <p>&copy; 2023 Web Oblig 2</p>
