--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -4,51 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon added -->
-    <link rel="icon" href="../image/logo.png" type="image/png">
+    <link rel="icon" href="../image/logo.png" type="image/png" />
     <!-- css link added  -->
     <link rel="stylesheet" href="../css/main.css" />
     <title>DATA1200</title>
   </head>
   <body>
-
     <header>
       <nav class="navbar">
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Data1200/index.html">Second Page</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="Data1200/index.html">Second Page</a></li>
         </ul>
-    </nav>
-    <h1 class="main-heading">DATA1200 Inclusive Web Design</h1>
-    <h2 class="sub-title">Study Programme</h2>
-  </header>
-<main class="second-page-main">
-  <nav>
-    <ul>
-      <li>Bachelorstudium i ingeniørfag</li>
-      <li>Bachelorstudium i informasjonsteknologi</li>
-      <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
-    </ul>
-  </nav>
-    <h2 class="sub-title">Learning outcomes</h2>
-    <nav>
-    <ul>
-      <li>Knowledge</li>
-      <li>Skills</li>
-    </ul>
-  </nav>
-    <h2 class="sub-title" >Teaching and learning methods</h2>
-    <nav>
-    <ul>
-      <li>Lectures</li>
-      <li>Exercises</li>
-      <li>Self-Study</li>
-    </ul>
-  </nav>
-  <div class="placeholder"></div>
-</main>
-  <footer class="second-page-footer">
-    <p>&copy; 2023 Web Oblig 2</p>
-    <p>Located at 1234 Oslo, Norway</p>
-</footer>
+      </nav>
+      <h1 class="main-heading">DATA1200 Inclusive Web Design</h1>
+      <h2 class="sub-title">Study Programme</h2>
+    </header>
+    <main class="second-page-main">
+      <nav>
+        <ul>
+          <li>Bachelorstudium i ingeniørfag</li>
+          <li>Bachelorstudium i informasjonsteknologi</li>
+          <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
+        </ul>
+      </nav>
+      <h2 class="sub-title">Learning outcomes</h2>
+      <nav>
+        <ul>
+          <li>Knowledge</li>
+          <li>Skills</li>
+        </ul>
+      </nav>
+      <h2 class="sub-title">Teaching and learning methods</h2>
+      <nav>
+        <ul>
+          <li>Lectures</li>
+          <li>Exercises</li>
+          <li>Self-Study</li>
+        </ul>
+      </nav>
+      <div class="placeholder"></div>
+    </main>
+    <footer class="second-page-footer">
+      <p>&copy; 2023 Web Oblig 2</p>
+      <p>Located at 1234 Oslo, Norway</p>
+    </footer>
   </body>
 </html>
