--- a/Oblig2/Data1200/index.html
+++ b/Oblig2/Data1200/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon added -->
-    <link rel="icon" href="../image/logo.png" type="image/png" />
+    <link rel="icon" href="../image/oslomet-icon.png" type="image/png" />
     <!-- css link added  -->
     <link rel="stylesheet" href="../css/main.css" />
     <title>DATA1200</title>
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <nav class="navbar navbar-second">
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="Data1200/index.html">Second Page</a></li>
         </ul>
       </nav>
-      <h1 class="main-heading">DATA1200 Inclusive Web Design</h1>
-      <h2 class="sub-title">Study Programme</h2>
+      <h1 class="second-page-heading">DATA1200 Inclusive Web Design</h1>
+      <h2 class="sub-title-second">Study Programme</h2>
     </header>
     <main class="second-page-main">
       <nav>
@@ -28,14 +28,14 @@
           <li>Bachelorstudium i anvendt datateknologi / Årsstudium i IT</li>
         </ul>
       </nav>
-      <h2 class="sub-title">Learning outcomes</h2>
+      <h2 class="sub-title-second">Learning outcomes</h2>
       <nav>
         <ul>
           <li>Knowledge</li>
           <li>Skills</li>
         </ul>
       </nav>
-      <h2 class="sub-title">Teaching and learning methods</h2>
+      <h2 class="sub-title-second">Teaching and learning methods</h2>
       <nav>
         <ul>
           <li>Lectures</li>
